--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: QunqueJ's Blog
 SEOTitle: 雀食是屑的博客 | Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/wallhaven-2edkyg.png
 email: qssx@aliyun.com
 description: "Every failure is leading towards success."
 keyword: "QunqueJ, QunqueJ Blog, 雀食是屑的博客, QunqueJ, 雀食是屑, C++, Apple, iPhone"
